--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,11 @@
 .App {
-  text-align: center;
+	max-width: 760px;
+	width: 100%;
+	padding: 10px;
+	box-sizing: border-box;
+	margin: 0 auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 
 
